# Tutorial-C

./: .gitattributes  Dockerfile  dockerw.bat  readme.md  readme.txt
1. LanguageStructure/: readme.txt
2. Preprocessor/: readme.txt
3. Variabe & Statement/: readme.txt
4. Function/: readme.txt
5. Pointer/: readme.txt
6. Class & Struct/: readme.txt
7. Inherent & Polymorphism/: readme.txt
8. Standard Template Library/: readme.txt
doc/class-and-struct/: readme.md
doc/function/: readme.md
doc/inherent-and-polymorphism/: readme.md
doc/language-structure/: readme.md
doc/pointer/: readme.md
doc/preprocessor/: readme.md
doc/standard-template-library/: readme.md
doc/variabe-and-statement/: readme.md
src/: run-cmake.sh  run.sh
src/atomic/base/: main.cpp
src/atomic/bool/: main.cpp
src/atomic/flag/: main.cpp
src/atomic/thread-worker/: main.cpp
src/class/: CMakeLists.txt  main.cpp  my_class.cpp  my_class.h
src/class-polymorphism/classes/: rectangle.h  shape.cpp
src/class/base/: main.cpp
src/class/polymorphism/: main.cpp
src/closure/: main.cpp
src/data/: arrayDemo.cpp  main.cpp  numberDemo.cpp  stringDemo.cpp
src/exception/: main.cpp
src/file/cstdio/: main.cpp
src/file/cstdio-seek/: CMakeLists.txt  c.csv  main.cpp
src/file/fcntl/: main.cpp
src/file/fstream-binary/: main.cpp
src/function/: callByPointer.cpp  callByReference.cpp  callByValue.cpp  main.cpp
src/modifier/: main.cpp
src/pointer/: main.cpp
src/storage-classes/: main.cpp  support.cpp
src/thread/mutex/: CMakeLists.txt  main.cpp
src/variable-types/: main.cpp
(+14 files in other folders)
